Inventory: Added http endpoints
